--- a/main.latex
+++ b/main.latex
@@ -20,7 +20,9 @@
 \maketitle
 
 \section{Outline of the Software Being Tested}
-The software I will be testing is from my Informatics Large Practical project. This software (called PizzaDronz) is an online Pizza ordering system
+The software I will be testing is from my Informatics Large Practical project. This software (called PizzaDronz) is an online Pizza ordering system that uses drones to deliver pizza to students who are in Appleton Tower. The path the drone takes must avoid designated no fly zones which are usually open areas in which students tend to gather.
+The purpose of these no fly zones is to prevent collisions (with people) if the drone's hardware fails or the pizza boxes weren't correctly attached to the drone.
+The data for the no fly zones, restaurants and orders is retrieved from a central server which provides \texttt{.json} and \texttt{.geojson} files.
 
 \section{Learning Outcomes}
 \textit{This is the main part of the portfolio where you describe how you have gone about meeting each of the sub-criteria.}
