--- a/main.latex
+++ b/main.latex
@@ -23,11 +23,13 @@
 The software I will be testing is from my Informatics Large Practical project. This software (called PizzaDronz) is an online Pizza ordering system that uses drones to deliver pizza to students who are in Appleton Tower. The path the drone takes must avoid designated no fly zones which are usually open areas in which students tend to gather.
 The purpose of these no fly zones is to prevent collisions (with people) if the drone's hardware fails or the pizza boxes weren't correctly attached to the drone.
 The data for the no fly zones, restaurants and orders is retrieved from a central server which provides \texttt{.json} and \texttt{.geojson} files.
+The program then uses this data to construct a visibility graph of all of the restaurant locations and Appleton Tower.
+This graph is used to path find from Appleton Tower to each of the restaurants. Each of these paths is then approximated as the drone is only allowed to move a certain distance in each of the cardinal directions.
+
 
 \section{Learning Outcomes}
-\textit{This is the main part of the portfolio where you describe how you have gone about meeting each of the sub-criteria.}
 \begin{enumerate}
-\item \textbf{Analyze requirements to determine appropriate testing strategies} \marginpar{[default 20\%]}
+\item \textbf{Analyze requirements to determine appropriate testing strategies} \marginpar{[20\%]}
 \begin{enumerate}
 \item \textbf{Range of requirements, functional requirements, measurable quality attributes, qualitative requirements}
 \item \textbf{Level of requirements, system, integration, unit}
